--- a/views/account.mustache
+++ b/views/account.mustache
@@ -106,7 +106,7 @@
               </div>
             </div>
 
-            <a href="#sign-in-dialog" class="button popup-with-zoom-anim">Change Password</a>
+            <a href="#sign-in-dialog" class="button margin-top-15 popup-with-zoom-anim">Change Password</a>
 						<button id="btn-update-profile" class="button margin-top-15">Update Profile</button>
 					</div>
 				</div>
@@ -150,6 +150,27 @@
   <div class="small-dialog-header">
     <img style="max-width:180px" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" />
   </div>
+</div>
+
+<div class="sign-in-form style-1">
+  <form method="post" class="login">
+
+    <p class="form-row form-row-wide">
+      <label for="username">Email:
+        <i class="im im-icon-Email"></i>
+        <input id="input-login-email" type="text" class="input-text" name="email" />
+      </label>
+    </p>
+
+    <p class="form-row form-row-wide">
+      <label for="password">Password:
+        <i class="im im-icon-Lock-2"></i>
+        <input id="input-login-password" class="input-text" type="password" />
+      </label>
+    </p>
+
+    <input id="input-login" type="submit" class="button border fw margin-top-10" name="login" value="Log In" />
+  </form>
 </div>
 
 </div>
