--- a/views/account.mustache
+++ b/views/account.mustache
@@ -151,6 +151,7 @@
     <img style="max-width:180px" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" />
   </div>
   <div class="sign-in-form style-1">
+    <h4 class="gray">Reset Password</h4>
     <form method="post" class="login">
 
       <p class="form-row form-row-wide">
