--- a/views/account.mustache
+++ b/views/account.mustache
@@ -193,6 +193,9 @@
 
         })
       }
+      else {
+        console.log('USER NOT DEFINED')
+      }
 
       var turbo = Turbo({site_id: '5c244564231ff10015a113ea'})
       $('#btn-upload').click(function(event){
