convert into anchor tag

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -166,7 +166,7 @@
         <input id="input-password-2" type="password" class="input-text" placeholder="re-type new password" />
       </label>
     </p>
-    <button id="btn-update-password" class="button border fw margin-top-10">Reset Password</button>
+    <a href="#" id="btn-update-password" class="button border fw margin-top-10">Reset Password</a>
   </div>
 </div>
 
