--- a/views/account.mustache
+++ b/views/account.mustache
@@ -166,7 +166,7 @@
         <input id="input-password-2" type="password" class="input-text" placeholder="re-type new password" />
       </label>
     </p>
-    <a href="#" id="btn-update-password" class="button border fw margin-top-10">Reset Password</a>
+    <a href="#" id="btn-update-password" class="button fw margin-top-10">Reset Password</a>
   </div>
 </div>
 
@@ -298,7 +298,15 @@
       reloadUI()
       $('#btn-update-password').click(function(event){
         event.preventDefault()
-        console.log('RESET PASSWORD: ')
+        var pw1 = $('#input-password-1').val()
+        var pw2 = $('#input-password-2').val()
+
+        if (pw1 != pw2){
+          alert('Passwords do not match')
+          return
+        }
+
+        console.log('RESET PASSWORD: ' + pw1)
       })
 
     })()
