--- a/views/account.mustache
+++ b/views/account.mustache
@@ -319,6 +319,7 @@
           success: function(response, status, xhr){
             console.log('RESET PASSWORD: ' + JSON.stringify(response))
             alert('Password Successfully Reset')
+            document.getElementById('btn-update-password').click()
           },
           error: function(xhr, status, err){
             alert('Error - ' + err)
