--- a/views/account.mustache
+++ b/views/account.mustache
@@ -106,7 +106,7 @@
               </div>
             </div>
 
-            <a href="#sign-in-dialog" class="button margin-top-15 margin-right-10 popup-with-zoom-anim">Change Password</a>
+            <a href="#sign-in-dialog" id="btn-change-pw" class="button margin-top-15 margin-right-10 popup-with-zoom-anim">Change Password</a>
 						<a href="#" id="btn-update-profile" class="button margin-top-15">Update Profile</a>
 					</div>
 				</div>
@@ -319,7 +319,7 @@
           success: function(response, status, xhr){
             console.log('RESET PASSWORD: ' + JSON.stringify(response))
             alert('Password Successfully Reset')
-            document.getElementById('btn-update-password').click()
+            document.getElementById('btn-change-pw').click()
           },
           error: function(xhr, status, err){
             alert('Error - ' + err)
