wait half second before launching modal

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -339,7 +339,9 @@
       if (query.resetpassword == null)
         return
 
-      document.getElementById('btn-change-pw').click()
+      setTimeout(function(){
+        document.getElementById('btn-change-pw').click()
+      }, 500)
     })()
   </script>
 </body>
