--- a/views/admin/page.mustache
+++ b/views/admin/page.mustache
@@ -22,6 +22,7 @@
 <body>
   <div id="root"></div>
 
+  <script src="https://js.stripe.com/v3/"></script>
   <script type="text/javascript">window.__PRELOADED_STATE__ = {{{pageConfig}}}</script>
   <script type="text/javascript" src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/dist/js/vendor.min.js"></script>
 
