--- a/views/index.mustache
+++ b/views/index.mustache
@@ -121,7 +121,7 @@
   <div class="selected-template">
     <img src="<% image %>=s1024" alt="Vertex 360">
     <div class="post-content">
-      <button style="float:right">Launch This Template</button>
+      <a href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim" style="float:right">Launch This Template</a>
       <h3><a class="capitalize" href="#"><% name %></a></h3>
       <ul class="post-meta">
         <li class="capitalize"><% template.category %></li>
