launch this template

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -140,7 +140,7 @@
 
       <hr />
       <div id="launch-template-container">
-        <a id="btn-launch-template" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Use This Template <i class="sl sl-icon-login"></i></a>
+        <a id="btn-launch-template" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Launch This Template <i class="sl sl-icon-login"></i></a>
       </div>
     </div>
   </div>
