--- a/views/index.mustache
+++ b/views/index.mustache
@@ -93,7 +93,7 @@
   <div style="text-align:center">
     <h3 style="margin-bottom:20px">Launch Site</h3>
     <p style="margin-bottom:16px;color:#888">Launch this template on your account.</p>
-    <img style="width:320px" src="<% image %>=s512" />
+    <img style="width:260px;margin-bottom:16px" src="<% image %>=s512" />
     <input id="input-site-name" type="text" placeholder="Your Site Name" />
     <div id="btn-launch-container">
       <a style="margin-top:4px;width:100%" id="btn-clone-template" href="#" class="button with-icon">Launch This Template <i class="fa fa-angle-right"></i></a>
