--- a/views/index.mustache
+++ b/views/index.mustache
@@ -91,7 +91,7 @@
 <!-- Wrapper / End -->
 <script type="text/template" id="tpl-launch-template">
   <div style="text-align:center">
-    <h3 style="margin-bottom:20px">Launch Site</h3>
+    <h3 style="margin-bottom:0px;margin-top:0px">Launch Site</h3>
     <p style="margin-bottom:16px;color:#888">Launch this template on your account.</p>
     <img style="width:260px;margin-bottom:16px" src="<% image %>=s512" />
     <input id="input-site-name" type="text" placeholder="Your Site Name" />
