show template description

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -60,7 +60,7 @@
 							</div>
 							<div class="listing-item-content">
 								<h3>{{name}}</h3>
-								<span>{{category}}</span>
+								<span>{{description}}</span>
 							</div>
 							<span class="like-icon"></span>
 						</div>
