show profile username and image

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -47,16 +47,14 @@
 		<div class="col-md-12">
 			<div class="row">
 
-
-				<!-- Listing Item -->
         {{#templates}}
 				<div class="col-lg-4 col-md-6">
 					<a href="#" class="listing-item-container compact">
 						<div class="listing-item">
 							<img src="{{{image}}}=s1024" alt="Vertex 360">
 							<div class="listing-item-details" style="text-align:right">
-                dkwon
-                <img style="width:32px;border-radius:50%;margin-left:4px" src="https://lh3.googleusercontent.com/fF69mg9RJLJr0mi-h7bfBf_er1skEQzJekC4N64v17QiKhlnuyWHPWRxP6iUktR_ZNFdJYaz0G4OIxwZag0hPrNr2A=s120-c" />
+                {{profile.username}}
+                <img style="width:32px;border-radius:50%;margin-left:4px" src="{{{profile.image}}}=s120-c" />
 							</div>
 							<div class="listing-item-content">
 								<h3>{{name}}</h3>
@@ -67,83 +65,6 @@
 					</a>
 				</div>
         {{/templates}}
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="col-lg-4 col-md-6">
-					<a href="listings-single-page.html" class="listing-item-container compact">
-						<div class="listing-item">
-							<img src="images/listing-item-03.jpg" alt="">
-							<div class="listing-item-details">
-								<ul>
-									<li>Starting from $59 per night</li>
-								</ul>
-							</div>
-							<div class="listing-item-content">
-								<div class="numerical-rating" data-rating="2.0"></div>
-								<h3>Hotel Govendor</h3>
-								<span>778 Country Street, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="col-lg-4 col-md-6">
-					<a href="listings-single-page.html" class="listing-item-container compact">
-						<div class="listing-item">
-							<img src="images/listing-item-04.jpg" alt="">
-
-							<div class="listing-badge now-open">Now Open</div>
-
-							<div class="listing-item-content">
-								<div class="numerical-rating" data-rating="5.0"></div>
-								<h3>Burger House <i class="verified-icon"></i></h3>
-								<span>2726 Shinn Street, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="col-lg-4 col-md-6">
-					<a href="listings-single-page.html" class="listing-item-container compact">
-						<div class="listing-item">
-							<img src="images/listing-item-05.jpg" alt="">
-							<div class="listing-item-content">
-								<div class="numerical-rating" data-rating="3.5"></div>
-								<h3>Airport</h3>
-								<span>1512 Duncan Avenue, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
-
-				<!-- Listing Item -->
-				<div class="col-lg-4 col-md-6">
-					<a href="listings-single-page.html" class="listing-item-container compact">
-						<div class="listing-item">
-							<img src="images/listing-item-06.jpg" alt="">
-
-							<div class="listing-badge now-closed">Now Closed</div>
-
-							<div class="listing-item-content">
-								<div class="numerical-rating" data-rating="4.5"></div>
-								<h3>Think Coffee</h3>
-								<span>215 Terry Lane, New York</span>
-							</div>
-							<span class="like-icon"></span>
-						</div>
-					</a>
-				</div>
-				<!-- Listing Item / End -->
 
 			</div>
 		</div>
