populate category select options

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -30,13 +30,11 @@
 					<input type="text" placeholder="What are you looking for?" />
 				</div>
 				<div class="main-search-input-item">
-					<select data-placeholder="All Categories" class="chosen-select" >
-						<option>All Categories</option>
-						<option>Shops</option>
-						<option>Hotels</option>
-						<option>Restaurants</option>
-						<option>Fitness</option>
-						<option>Events</option>
+					<select data-placeholder="Select Category" class="chosen-select">
+						<option value="featured">Featured</option>
+						<option value="resume">Resume</option>
+						<option value="landing">Landing Page</option>
+						<option value="portfolio">Portfolio</option>
 					</select>
 				</div>
 
