--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -84,7 +84,7 @@
 
 <div id="footer" class="margin-top-80" style="background:#f9f9f9">
 	<div class="container">
-		<div class="row">
+		<div class="row padding-bottom-40">
 			<div class="col-md-6 col-sm-6">
 				<img class="footer-logo" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" alt="Vertex 360">
 				<br><br>
@@ -95,10 +95,9 @@
 				<h4>Helpful Links</h4>
 				<ul class="footer-links">
 					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Our Partners</a></li>
+					<li><a href="#">Templates</a></li>
 					<li><a href="#">How It Works</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#">Terms of Use</a></li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
