--- a/views/template.mustache
+++ b/views/template.mustache
@@ -21,7 +21,7 @@
   {{>nav}}
   <div class="clearfix"></div>
 
-  <div class="single-listing-page-titlebar"></div>
+  <div class="single-listing-page-titlebar padding-top-120"></div>
 
 <div class="container">
 	<div class="row sticky-wrapper">
