--- a/views/template.mustache
+++ b/views/template.mustache
@@ -21,14 +21,13 @@
   {{>nav}}
   <div class="clearfix"></div>
 
-  <div class="single-listing-page-titlebar padding-top-120"></div>
+  <div class="single-listing-page-titlebar"></div>
 
 <div class="container">
 	<div class="row sticky-wrapper">
 		<div class="col-lg-8 col-md-8 padding-right-30">
 
-			<!-- Titlebar -->
-			<div id="titlebar" class="listing-titlebar">
+			<div id="titlebar" class="listing-titlebar padding-top-120">
 				<div class="listing-titlebar-title">
 					<h2>Sunny and Modern Apartment<span class="listing-tag">Apartments</span></h2>
 					<span>
@@ -57,16 +56,6 @@
 
 			<!-- Overview -->
 			<div id="listing-overview" class="listing-section">
-
-				<!-- Apartment Description -->
-				<ul class="apartment-details">
-					<li>2 rooms</li>
-					<li>1 bedroom</li>
-					<li>1 bed</li>
-					<li>1 bathroom</li>
-				</ul>
-
-				<!-- Description -->
 				<p>
 					Ut euismod ultricies sollicitudin. Curabitur sed dapibus nulla. Nulla eget iaculis lectus. Mauris ac maximus neque. Nam in mauris quis libero sodales eleifend. Morbi varius, nulla sit amet rutrum elementum, est elit finibus tellus, ut tristique elit risus at metus.
 				</p>
@@ -75,7 +64,6 @@
 					 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar. Donec a consectetur nulla. Nulla posuere sapien vitae lectus suscipit, et pulvinar nisi tincidunt. Aliquam erat volutpat. Curabitur convallis fringilla diam sed aliquam. Sed tempor iaculis massa faucibus feugiat. In fermentum facilisis massa, a consequat purus viverra.
 				</p>
 
-				<!-- Amenities -->
 				<h3 class="listing-desc-headline">Amenities</h3>
 				<ul class="listing-features checkboxes">
 					<li>Elevator in building</li>
@@ -92,10 +80,10 @@
 			<div id="listing-gallery" class="listing-section">
 				<h3 class="listing-desc-headline margin-top-70">Gallery</h3>
 				<div class="listing-slider-small mfp-gallery-container margin-bottom-0">
-					<a href="images/single-listing-02a.jpg" data-background-image="images/single-listing-02a.jpg" class="item mfp-gallery" title="Title 2"></a>
-					<a href="images/single-listing-01a.jpg" data-background-image="images/single-listing-01a.jpg" class="item mfp-gallery" title="Title 1"></a>
-					<a href="images/single-listing-03a.jpg" data-background-image="images/single-listing-03a.jpg" class="item mfp-gallery" title="Title 3"></a>
-					<a href="images/single-listing-04a.jpg" data-background-image="images/single-listing-04a.jpg" class="item mfp-gallery" title="Title 3"></a>
+					<a href="/images/single-listing-02a.jpg" data-background-image="/images/single-listing-02a.jpg" class="item mfp-gallery" title="Title 2"></a>
+					<a href="/images/single-listing-01a.jpg" data-background-image="/images/single-listing-01a.jpg" class="item mfp-gallery" title="Title 1"></a>
+					<a href="/images/single-listing-03a.jpg" data-background-image="/images/single-listing-03a.jpg" class="item mfp-gallery" title="Title 3"></a>
+					<a href="/images/single-listing-04a.jpg" data-background-image="/images/single-listing-04a.jpg" class="item mfp-gallery" title="Title 3"></a>
 				</div>
 			</div>
 
@@ -172,7 +160,7 @@
 		</div>
 
 		<div class="col-lg-4 col-md-4 margin-top-75 sticky">
-      
+
 			<!-- Book Now -->
 			<div class="boxed-widget booking-widget margin-top-35">
 				<h3><i class="fa fa-calendar-check-o "></i> Booking <div class="listing-price">$49 <i>/night</i></div></h3>
