show template image

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -38,6 +38,7 @@
 					<div class="star-rating" data-rating="5">
 						<div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
 					</div>
+          <img src="{{{template.image}}}=s1024" />
 				</div>
 			</div>
 
@@ -186,7 +187,7 @@
 				</div>
 
 				<!-- Book Now -->
-				<a href="pages-booking.html" class="button book-now fullwidth margin-top-5">Request To Book</a>
+				<a href="#" class="button book-now fullwidth margin-top-5">Request To Book</a>
 
 				<!-- Estimated Cost -->
 <!-- 				<div class="booking-estimated-cost">
@@ -232,7 +233,7 @@
 
 			<!-- Share / Like -->
 			<div class="listing-share margin-top-40 margin-bottom-40 no-border">
-				<button class="like-button"><span class="like-icon"></span> Bookmark this listing</button>
+				<button class="like-button"><span class="like-icon"></span> Bookmark this template</button>
 				<span>159 people bookmarked this place</span>
 
 					<!-- Share Buttons -->
