--- a/views/template.mustache
+++ b/views/template.mustache
@@ -71,9 +71,9 @@
 			<div id="listing-gallery" class="listing-section">
 				<h3 class="listing-desc-headline margin-top-70">Screenshots</h3>
 				<div class="listing-slider-small mfp-gallery-container margin-bottom-0">
-          {{#template.screenshots}}
+          {{#template.images}}
 					<a target="_blank" href="{{{.}}}" data-background-image="{{{.}}}" class="item mfp-gallery" title="Vertex 360"></a>
-          {{/template.screenshots}}
+          {{/template.images}}
 				</div>
 			</div>
 
