--- a/views/template.mustache
+++ b/views/template.mustache
@@ -72,7 +72,7 @@
 				<h3 class="listing-desc-headline margin-top-70">Screenshots</h3>
 				<div class="listing-slider-small mfp-gallery-container margin-bottom-0">
           {{#template.images}}
-					<a target="_blank" href="{{{.}}}" data-background-image="{{{.}}}" class="item mfp-gallery" title="Vertex 360"></a>
+					<a target="_blank" href="{{{.}}}=s1024" data-background-image="{{{.}}}=s1024" class="item mfp-gallery" title="Vertex 360"></a>
           {{/template.images}}
 				</div>
 			</div>
