copy for how it works section

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -103,17 +103,51 @@
 
 <script type="text/template" id="tpl-how-it-works">
   <div>
-    <img src="/images/blog-post-02.jpg" alt="Vertex 360">
-  	<div class="post-content">
-  		<h3><a href="#">Make a Website in Minutes</a></h3>
+    <img src="https://lh3.googleusercontent.com/ZrN5Nhga-8cd9ju47rv8l6lYlrF4Hu12R-rov72-0qIT1k1fGCl4Bn0KZRMt0An1PbkUiSHefxR_4oqvqL4nqOZB1Q=s1024" alt="Vertex 360">
+  	<div class="post-content" >
+  		<h3><a href="#">Lightning Fast Web Design</a></h3>
   		<ul class="post-meta">
   			<li>No Coding Required</li>
         <li>FREE to start</li>
   		</ul>
 
-  		<p>
-        Nam nisl lacus, dignissim ac tristique ut, scelerisque eu massa. Vestibulum ligula nunc, rutrum in malesuada vitae, tempus sed augue. Curabitur quis lectus quis augue dapibus facilisis.
+      <p class="margin-top-0 margin-bottom-40">
+        Get up and running with a gorgeous new website in under an hour.
       </p>
+
+      <hr class="margin-bottom-40" />
+
+      <h3>Web Design Made Easy</h3>
+      <p class="margin-top-0 margin-bottom-40">
+        Simply input your content and walk away - no coding required! No more tinkering with
+        confusing editors, drag &amp; drop tools, or ridiculously complicated features for
+        <em>"beginners"</em>. On Vertex 360, simply input your text and images and move on
+        with your life, business, more important stuff.
+      </p>
+
+      <hr class="margin-bottom-40" />
+
+      <h3>Free to Start</h3>
+      <p class="margin-top-0 margin-bottom-40">
+        Vertex websites are free to start and come with a robust set of features
+        out of the box. Once you are ready to connect your site to a custom domain,
+        our afforable plans begin at only $5 per month.
+      </p>
+
+      <hr class="margin-bottom-40" />
+
+      <h3>Powerful Features</h3>
+      <p class="margin-top-0 margin-bottom-40">
+        Easily interact with your customers with email subscriber lists, image hosting and blog support.
+      </p>
+
+      <hr class="margin-bottom-40" />
+
+      <h3>Social</h3>
+      <p class="margin-top-0 margin-bottom-40">
+        Connect to your Facebook, Instagram, LinkedIn, YouTube, and Soundcloud accounts.
+      </p>
+
   	</div>
   </div>
 </script>
