--- a/views/index.mustache
+++ b/views/index.mustache
@@ -104,7 +104,8 @@
 <script type="text/template" id="tpl-how-it-works">
   <div>
     <img src="https://lh3.googleusercontent.com/ZrN5Nhga-8cd9ju47rv8l6lYlrF4Hu12R-rov72-0qIT1k1fGCl4Bn0KZRMt0An1PbkUiSHefxR_4oqvqL4nqOZB1Q=s1024" alt="Vertex 360">
-  	<div class="post-content" >
+  	<div class="post-content">
+
   		<h3><a href="#">Lightning Fast Web Design</a></h3>
   		<ul class="post-meta">
   			<li>No Coding Required</li>
@@ -117,7 +118,8 @@
 
       <hr class="margin-bottom-40" />
 
-      <h3>Web Design Made Easy</h3>
+      <img style="width:80%;border:1px solid #ededed" src="https://lh3.googleusercontent.com/f25J1JMUTLjI-9GZvqTzyJEZmMbJYjiCIIq04V5cFoD7bnKcMi44fOVrZ50-vin0R25Iw21zPh6D_T8NeQtIxOAF=s1024" />
+      <h3 class="margin-top-40">Web Design Made Easy</h3>
       <p class="margin-top-0 margin-bottom-40">
         Simply input your content and walk away - no coding required! No more tinkering with
         confusing editors, drag &amp; drop tools, or ridiculously complicated features for
@@ -127,7 +129,8 @@
 
       <hr class="margin-bottom-40" />
 
-      <h3>Free to Start</h3>
+      <img style="width:80%" src="https://lh3.googleusercontent.com/IRk0higW6nSjtBG_8lzhNpU7Pi6yzguo1J7Thkwlj4biYpqB63uZ-IAfeQN9nJS1QiokjVnYrgVBYvkcdpDFKGk-rmU=s1024" />
+      <h3 class="margin-top-40">Free to Start</h3>
       <p class="margin-top-0 margin-bottom-40">
         Vertex websites are free to start and come with a robust set of features
         out of the box. Once you are ready to connect your site to a custom domain,
