--- a/views/index.mustache
+++ b/views/index.mustache
@@ -142,6 +142,18 @@
       <h3>Powerful Features</h3>
       <p class="margin-top-0 margin-bottom-40">
         Easily interact with your customers with email subscriber lists, image hosting and blog support.
+        <ul class="listing-features checkboxes margin-top-0 margin-bottom-20">
+  				<li>CMS (blog, users, etc)</li>
+  				<li><em><b>Automatic SSL</b></em></li>
+  				<li>Accept Credit Cards</li>
+  				<li>Subscriber Forms</li>
+  				<li>Download Source Code</li>
+          <li><em><b>Custom Domains</b></em></li>
+          <li><em><b>Site Analytics</b></em></li>
+          <li>Collaboration Option</li>
+          <li>Email Support</li>
+  			</ul>
+        <em><b>Premium Feature</b></em>
       </p>
 
       <hr class="margin-bottom-40" />
