collaboration image of girls

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -139,7 +139,8 @@
 
       <hr class="margin-bottom-40" />
 
-      <h3>Powerful Features</h3>
+      <img class="margin-left-20 margin-bottom-20" style="width:40%;float:right;padding:3px;border:1px solid #ededed" src="https://lh3.googleusercontent.com/i66jh3seKUPT3L4qmKYd3Xp9CCQizoQHKIRAZCAisaoqDLeHAOEdxt5DdD5naLliecwl_tHMEvg0Df1pbkITET0m=s512" />
+      <h3 class="margin-top-40">Powerful Features</h3>
       <p class="margin-top-0 margin-bottom-40">
         Easily interact with your customers with email subscriber lists, image hosting and blog support.
         <ul class="listing-features checkboxes margin-top-0 margin-bottom-20">
