--- a/views/index.mustache
+++ b/views/index.mustache
@@ -129,16 +129,6 @@
 
       <hr class="margin-bottom-40" />
 
-      <img style="width:80%" src="https://lh3.googleusercontent.com/IRk0higW6nSjtBG_8lzhNpU7Pi6yzguo1J7Thkwlj4biYpqB63uZ-IAfeQN9nJS1QiokjVnYrgVBYvkcdpDFKGk-rmU=s1024" />
-      <h3 class="margin-top-40">Free to Start</h3>
-      <p class="margin-top-0 margin-bottom-40">
-        Vertex websites are free to start and come with a robust set of features
-        out of the box. Once you are ready to connect your site to a custom domain,
-        our afforable plans begin at only $5 per month.
-      </p>
-
-      <hr class="margin-bottom-40" />
-
       <img class="margin-left-20 margin-bottom-20" style="width:40%;float:right;padding:3px;border:1px solid #ededed" src="https://lh3.googleusercontent.com/i66jh3seKUPT3L4qmKYd3Xp9CCQizoQHKIRAZCAisaoqDLeHAOEdxt5DdD5naLliecwl_tHMEvg0Df1pbkITET0m=s512" />
       <h3 class="margin-top-40">Powerful Features</h3>
       <p class="margin-top-0 margin-bottom-40">
@@ -164,6 +154,16 @@
         Connect to your Facebook, Instagram, LinkedIn, YouTube, and Soundcloud accounts.
       </p>
 
+      <hr class="margin-bottom-40" />
+
+      <img style="width:80%" src="https://lh3.googleusercontent.com/IRk0higW6nSjtBG_8lzhNpU7Pi6yzguo1J7Thkwlj4biYpqB63uZ-IAfeQN9nJS1QiokjVnYrgVBYvkcdpDFKGk-rmU=s1024" />
+      <h3 class="margin-top-40">Free to Start</h3>
+      <p class="margin-top-0 margin-bottom-40">
+        Vertex websites are free to start and come with a robust set of features
+        out of the box. Once you are ready to connect your site to a custom domain,
+        our afforable plans begin at only $5 per month.
+      </p>
+      <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">GET STARTED</i></a>
   	</div>
   </div>
 </script>
