replace svg logos with pngs

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -23,7 +23,7 @@
 
   				<div id="logo">
   					<a href="/">
-              <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" alt="Vertex 360">
+              <img src="https://lh3.googleusercontent.com/LZSrYzE4jotCF5YwMk_r0qSZ4GSmft_KmvWFN0Q0dq7OD9kwWpuz8AJqMlyNYZDy5X7stxJIoHIO9ZZijnAdJF1yXg=s320" alt="Vertex 360">
             </a>
   				</div>
 
@@ -148,7 +148,7 @@
 
 <div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide" style="background:#fffffa">
   <div class="small-dialog-header">
-    <img style="max-width:180px" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" />
+    <img style="max-width:180px" src="https://lh3.googleusercontent.com/LZSrYzE4jotCF5YwMk_r0qSZ4GSmft_KmvWFN0Q0dq7OD9kwWpuz8AJqMlyNYZDy5X7stxJIoHIO9ZZijnAdJF1yXg=s360" />
   </div>
   <div class="sign-in-form style-1">
     <h3>Reset Password</h3>
