--- a/views/template.mustache
+++ b/views/template.mustache
@@ -253,7 +253,7 @@
 	<div class="container">
 		<div class="row padding-bottom-40">
 			<div class="col-md-6 col-sm-6">
-				<img class="footer-logo" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" alt="Vertex 360">
+				<img class="footer-logo" src="https://lh3.googleusercontent.com/DacvMRc4I_Zq0hENs6RyqlUcgQqY_jBdcLHvQckcpk3ZecgvzctF9_GnemZE3nCtnWFoY8g5C6gnCmccsMFP7aJi=s360" alt="Vertex 360">
 				<br><br>
 				<p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
 			</div>
