--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -1,6 +1,6 @@
 <div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide" style="background:#fffffa">
   <div class="small-dialog-header">
-    <img style="max-width:180px" src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" />
+    <img style="max-width:180px" src="https://lh3.googleusercontent.com/LZSrYzE4jotCF5YwMk_r0qSZ4GSmft_KmvWFN0Q0dq7OD9kwWpuz8AJqMlyNYZDy5X7stxJIoHIO9ZZijnAdJF1yXg=s360" />
   </div>
 
   <div id="modal-container" class="sign-in-form style-1">
