--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -6,7 +6,7 @@
 
 				<div id="logo">
 					<a href="/">
-            <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-3.svg" alt="Vertex 360">
+            <img src="https://lh3.googleusercontent.com/LZSrYzE4jotCF5YwMk_r0qSZ4GSmft_KmvWFN0Q0dq7OD9kwWpuz8AJqMlyNYZDy5X7stxJIoHIO9ZZijnAdJF1yXg=s320" alt="Vertex 360">
           </a>
 				</div>
 
