hide get started button if logged in

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -163,7 +163,9 @@
         out of the box. Once you are ready to connect your site to a custom domain,
         our afforable plans begin at only $5 per month.
       </p>
+      <%#showGetStarted%>
       <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">GET STARTED</i></a>
+      <%showGetStarted%>
   	</div>
   </div>
 </script>
